--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,6 +7,10 @@
       <h2>... and my new Astro site!</h2>
     
       <p>This is the blog page.</p>
-    
+      <ul>
+        <li><a href="/posts/post-1/">Post 1</a></li>
+        <li><a href="/posts/post-2/">Post 2</a></li>
+        <li><a href="/posts/post-3/">Post 3</a></li>
+      </ul>
       <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
     </body>
