--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,9 +1,18 @@
+---
+const pageTitle = "Blog";
+---
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>{pageTitle}</title>
+  </head>
 <body>
     <a href="/">Home</a>
-    <a href="/about/">Intro</a>
+    <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
       <h1>My Astro Site</h1>
-      <h1>Blog</h1>
+      <h1>{pageTitle}</h1>
       <h2>... and my new Astro site!</h2>
     
       <p>This is the blog page.</p>
@@ -12,5 +21,4 @@
         <li><a href="/posts/post-2/">Post 2</a></li>
         <li><a href="/posts/post-3/">Post 3</a></li>
       </ul>
-      <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
     </body>
