--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,19 @@
 
+---
+const pageTitle = "Home";
+---
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>{pageTitle}</title>
+  </head>
 <body>
 <a href="/">Home</a>
 <a href="/about/">About</a>
 <a href="/blog/">Blog</a>
   <h1>My Astro Site</h1>
-  <h1>Intro</h1>
+  <h1>{pageTitle}</h1>
   <h2>... and my new Astro site!</h2>
 
   <p>I am working through Astro's introductory tutorial. This is the basic intro page.</p>
