uploaded original blog posts

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,9 +8,8 @@ const pageTitle = "Blog";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <h2>... and my new Astro site!</h2>
 
-  <p>This is the blog page.</p>
+  <p>This is the blog page. There's not much here right now, stay as long as you'd like.</p>
   <ul>
     {
       allPosts.map((post: any) => (
