--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,16 +5,11 @@ const pageTitle = "Home Page";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <h2>My awesome blog subtitle</h2>
+  <h2>A pile of driftwood</h2>
   <Greeting client:load messages={["Hej", "Hallo", "Hola", "Habari", "Shalom"]} />
-    <p>
-      I am working through Astro's introductory tutorial. This is the basic
-      intro page.
-    </p>
 
     <p>
-      This site will update as I complete more of the tutorial, so keep checking
-      back and see how my journey is going!
+      I write about things, and also stuff.
     </p>
   </BaseLayout>
 
