--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ const pageTitle = "About Me";
 const identity = {
   firstName: "David",
   country: "United States",
-  occupation: "Scientist",
+  occupation: "scientist",
   hobbies: ["bicycling", "cooking", "camping"],
 };
 
@@ -23,7 +23,7 @@ const textCase = "uppercase";
 
 <style is:global define:vars={{ skillColor, fontWeight, textCase }}>
   
-  h1 {color: maroon;
+  h1 {
     font-size: 4rem;
   }
 
@@ -35,40 +35,8 @@ const textCase = "uppercase";
 </style>
 <BaseLayout pageTitle={pageTitle}>
 
-    
-  <p>
-    I am working through Astro's introductory tutorial. This is the second page
-    on my website, and it's the first one I built myself!
-  </p>
-
-  <p>Here are a few facts about me:</p>
-  <ul>
-    <li>My name is {identity.firstName}.</li>
-    <li>
-      I live in {identity.country} and I work as a {identity.occupation}.
-    </li>
-    {
-      identity.hobbies.length >= 2 && (
-        <li>
-          Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}
-        </li>
-      )
-    }
-  </ul>
-  <p>My skills are:</p>
-  <ul>
-    {skills.map((skill) => <li class="skill">{skill}</li>)}
-  </ul>
-
-  {happy && <p>I am happy to be learning Astro!</p>}
-
-  {finished && <p>I finished this tutorial!</p>}
-
-  {
-    goal === 3 ? (
-      <p>My goal is to finish in 3 days.</p>
-    ) : (
-      <p>My goal is not 3 days.</p>
-    )
-  }
+  <p>Hi there. I'm {identity.firstName}.</p>
+  <p>I'm a {identity.occupation}, and I enjoy a variety of things, including {identity.hobbies[0]} and {identity.hobbies[1]}.</p>
+  <p>I'll put more things here when I feel like it. Meanwhile, check out <a href="src/pages/blog.astro">my blog</a>, or follow me on <a href="https://bsky.app/profile/davidnyer.com">Bluesky</a> for my short-form blatherings.</p>
+  
 </BaseLayout>
